CSS/styles.css
/* GLOBAL */

html, body {
	margin: 0;
	padding: 0;
	color: #222;
	font-size: 20px;
	font-weight: 700;
	font-family: 'Amatic SC', cursive;
	background-image: url("../Assets/Images/page_background.png");
}

a {
	color: #7eb7cd;
}

audio {
	border-radius: 0.5em;
}

/* GENERAL */

.text {
	line-height: 1.6em;
	text-align: justify;
}

.heading {
	font-size: 3em;
	font-weight: 400;
	margin-bottom: 0.5em;
	font-family: 'Dancing Script', cursive;
}

.sub-heading {
	font-size: 2em;
	font-weight: 400;
	margin-bottom: 0.5em;
	font-family: 'Dancing Script', cursive;
}

.card {
	padding: 1.5em 2em;
	border-radius: 1em;
	background-color: white;
	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
}

.card.bordered {
	box-shadow: none;
	position: relative;
	margin-left: 0.5em;
}

.card.bordered::before {
	top: 0;
	right: 0;
	bottom: 0;
	content: "";
	z-index: -1;
	left: -0.5em;
	position: absolute;
	border-radius: 1em;
	background-size: 8em;
	background-position: bottom;
	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
	background-image: url("../Assets/Images/background_rotated.png");
}

.header-card {
	padding: 1em 2em;
	border-radius: 1em;
	margin-bottom: 3em;
	background-color: rgba(0,0,0,0.03);
}


/* PAGE */

#page {
	z-index: 1;
	margin: auto;
	padding: 0 2em;
	max-width: 1000px;
	position: relative;
	box-sizing: border-box;
	transition: padding 0.3s ease;
}

#content {
	margin-bottom: 3em;
}
#content>*:not(:last-child) {
	margin-bottom: 2em;
}


/* NAVBAR */

#navbar_container {
	text-align: center;
}
#navbar {
	display: flex;
	padding: 3em 0;
	user-select: none;
	align-items: flex-end;
	justify-content: space-between;
}

#nav_banner {
	font-size: 2em;
	color: inherit;
	font-weight: 400;
	text-decoration: none;
	font-family: 'Dancing Script', cursive;
}
#straight span {
	display: inline-block;
	font-family: 'Amatic SC', cursive;
	transition-timing-function: cubic-bezier(.84,.09,.58,1.4);
	transition-property: transform;
}
#straight span:not(:first-child) {
	margin-left: -0.26em;
}
#straight span:nth-child(1) {transition-duration: 0.15s;}
#straight span:nth-child(2) {transition-duration: 0.18s;}
#straight span:nth-child(3) {transition-duration: 0.21s;}
#straight span:nth-child(4) {transition-duration: 0.24s;}
#straight span:nth-child(5) {transition-duration: 0.27s;}
#straight span:nth-child(6) {transition-duration: 0.3s;}
#straight span:nth-child(7) {transition-duration: 0.33s;}
#straight span:nth-child(8) {transition-duration: 0.36s;}

#nav_links_container {
	display: flex;
	column-gap: 1.5em;
}
#nav_links_container a {
	color: inherit;
	margin-bottom: 0.3em;
	text-decoration: none;
	transition: color 0.2s ease;
}
#nav_links_container a.active {
	color: #aaa;
	pointer-events: none;
	text-decoration: line-through;
}


/* HERO */

#hero_container {
	padding: 1em;
	border-radius: 1em;
	background-color: white;
	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
}

#hero {
	width: 100%;
	display: flex;
	overflow: hidden;
	position: relative;
	border-radius: 0.5em;
	background-size: 30%;
	align-items: flex-end;
	box-sizing: border-box;
	padding: 2em 1em 0 1em;
	justify-content: space-evenly;
	background-image: url("../Assets/Images/background.png");
}

#hero .bust {
	cursor: pointer;
	max-width: 180px;
	margin-bottom: -5px;
	transition: transform 0.2s ease-out;
}
#hero .bust a {
	display: block;
	position: relative;
	transition: transform 0.2s ease-out;
}
#hero .bust a::after {
	position: absolute;
	content: attr(data-name);
	color: #222;
	font-size: 0.9em;
	padding: 0.2em 0.5em;
	border-radius: 0.5em;
	background-color: white;
	bottom: 1em;
	left: 50%;
	opacity: 0;
	box-shadow: rgba(17, 17, 26, 0.3) 0px 0px 10px;
	transform: translate(-50%);
	z-index: 100;
	transition: 0.2s ease;
}

#hero .bust a img {
	width: 100%;
}

#bust_savannah, #bust_mridani {z-index: 2;}
#bust_aarush {
	left: 50%;
	bottom: 0;
	z-index: 3;
	width: 22%;
	position: absolute;
	transform: translate(-50%, 100%);
}


/* PAGE INTRO */

#page_intro {
	text-align: center;
}


/* ABOUT US */

.profile-card {
	padding: 1em;
	display: grid;
	row-gap: 0.5em;
	column-gap: 1em;
	transition: 0.2s ease;
	grid-template: 
		"profile-image profile-header"
		"profile-image profile-bio"
		/ auto 1fr;
}

.profile-card .profile-image-container {
	width: 150px;
	height: 150px;
	display: flex;
	overflow: hidden;
	background-size: 100%;
	align-items: flex-end;
	border-radius: 0.5em 0.2em 0.2em 0.5em;
	background-image: url("../Assets/Images/background.png");
	grid-area: profile-image;
}
.profile-card .profile-image-container img {
	width: 100%;
	object-fit: contain;
}

.profile-card .profile-header {
	display: flex;
	align-self: flex-end;
	align-items: flex-end;
	justify-content: space-between;
	grid-area: profile-header;
}
.profile-card .profile-header .profile-pronouns {
	color: #999;
	font-size: 0.9em;
	margin-bottom: 0.2em;
}
.profile-card .profile-header .profile-intro {
	font-size: 1.3em;
	margin-right: 0.2em;
	font-family: 'Dancing Script', cursive;
}

.profile-card .profile-bio {
	align-self: flex-start;
	grid-area: profile-bio;
}


/* FOOTER */

#footer {
	row-gap: 0.7em;
	display: flex;
	padding: 1.5em 2em;
	margin-bottom: 2em;
	text-align: center;
	border-radius: 1em;
	align-items: center;
	flex-direction: column;
	justify-content: space-between;
	background-color: rgba(0,0,0,0.03);
}

#footer_banner {
	font-size: 1.2em;
}

#footer_credits {
	font-size: 0.9em;
}


/* DEVICES */

@media (pointer:fine) {
	#hero .bust:hover a::after {opacity: 1;}
	#hero .bust a:hover {transform: scale(1.08);}
	#nav_links_container a:hover {color: #aaa;}
	#hero:hover #bust_savannah {transform: translateX(26%);}
	#hero:hover #bust_mridani {transform: translateX(-26%);}
	#hero:hover #bust_aarush {transform: translate(-50%, 0);}
	#navbar:hover #straight span {transform: rotate(20deg) translate(0.1em, 0.01em);}
}

@media (pointer:coarse) {
	#hero .bust a::after {
		opacity: 1;
	}
}


/* BREAKPOINTS */

@media only screen and (max-width: 900px) {
	.profile-card {
		row-gap: 0.7em;
		align-items: flex-end;
		grid-template: 
		"profile-image profile-header"
		"profile-bio profile-bio"
		/ auto 1fr;
	}
	.profile-card .profile-image-container {
		width: 100px;
		height: 100px;
		border-radius: 0.5em 0.2em 0.2em 0.2em;
	}
	.profile-card .profile-header {
		row-gap: 0.5em;
		align-items: flex-start;
		flex-direction: column-reverse;
	}
}

@media only screen and (max-width: 730px) {
	.header-card, #content {
		margin-bottom: 2.5em;
	}
	#navbar {
		row-gap: 0.8em;
		padding: 2.5em 0;
		align-items: center;
		display: inline-flex;
		flex-direction: column;
	}
	#nav_links_container {
		width: 90%;
		justify-content: space-evenly;
	}
	#hero_container {
		padding: 0.5em;
	}
	#hero .bust a::after {
		font-size: 0.8em;
	}
	#footer {
		row-gap: 0.5em;
		padding: 1.5em;
		font-size: 0.9em;
	}
}

@media only screen and (max-width: 440px) {
	body {
		font-size: 18px;
	}
	.card {
		padding: 1.5em;
	}
	.header-card {
		padding: 1.5em 1.5em 0.5em 1.5em;
	}
	#page {
		padding: 1.5em 1.5em 0 1.5em;
	}
	#navbar {
		padding: 1.8em 0;
	}
	#nav_banner {
		font-size: 10vw;
	}
	#hero {
		padding: 2em 0.5em 0 0.5em;
	}
}

